<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/editToolbar"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="#ffff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Overflow"
        app:theme="@style/ToolbarTheme">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:layout_gravity="end"
            android:paddingRight="20dp"/>
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit"
            android:textColor="#000"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:background="@color/back"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editToolbar"/>


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/david"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editToolbar"
        app:layout_constraintVertical_bias="0.155" />


    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="573dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image">

        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FirstName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="text"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <TextView
            android:id="@+id/lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LastName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editlname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:inputType="text"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <TextView
            android:id="@+id/emaiL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/usern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gender"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/SpinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textSize="12sp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:prompt="@string/gender"
            android:entries="@array/gender"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <TextView
            android:id="@+id/Date_Of_Birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DOB"
            android:textSize="12sp" />
<LinearLayout
    android:orientation="horizontal"
    android:weightSum="3">

    <Spinner
        android:id="@+id/SpinnerDay"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:hint="@string/day"
        android:layout_weight="1"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    <Spinner
        android:id="@+id/SpinnerMonth"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/month"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_weight="1"/>

    <Spinner
        android:id="@+id/SpinnerYear"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_gravity="end|center_vertical"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:layout_weight="1"/>
</LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="@color/back"
            android:text="@string/save"
            android:textColor="@color/toolbar_color_control_normal" />
    </TableLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="ContentDescription"/>


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_home_black_24dp"
            tools:ignore="ContentDescription"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/account"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_account_balance_black_24dp"
            tools:ignore="ContentDescription"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/search"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_search_black_24dp"
            tools:ignore="ContentDescription"
            android:layout_weight="1"/>


        <ImageView
            android:id="@+id/favo"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_favorite_border_black_24dp"
            tools:ignore="ContentDescription"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/userinfo"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_person_outline_black_24dp"
            tools:ignore="ContentDescription"
            android:layout_weight="1"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>
</ScrollView>
